@@ -303,6 +303,7 @@ public class NativeImage {
     private final List<ExcludeConfig> excludedConfigs = new ArrayList<>();
     private final LinkedHashSet<String> addModules = new LinkedHashSet<>();
     private final LinkedHashSet<String> limitModules = new LinkedHashSet<>();
+    private final LinkedHashSet<String> enableNativeAccessModules = new LinkedHashSet<>(ModuleSupport.SYSTEM_MODULES);
 
     private long imageBuilderPid = -1;
 
@@ -1323,6 +1324,8 @@ public class NativeImage {
         if (config.modulePathBuild && !finalImageClasspath.isEmpty()) {
             imageBuilderJavaArgs.add(DefaultOptionHandler.addModulesOption + "=ALL-DEFAULT");
         }
+        assert !enableNativeAccessModules.isEmpty();
+        imageBuilderJavaArgs.add("--enable-native-access=" + String.join(",", enableNativeAccessModules));
 
         boolean useColorfulOutput = configureBuildOutput();
 
@@ -1950,6 +1953,10 @@ public class NativeImage {
 
     public void addLimitedModules(String limitModulesArg) {
         limitModules.addAll(Arrays.asList(SubstrateUtil.split(limitModulesArg, ",")));
+    }
+
+    public void addEnableNativeAccess(String enableNativeAccessArg) {
+        enableNativeAccessModules.addAll(Arrays.asList(SubstrateUtil.split(enableNativeAccessArg, ",")));
     }
 
     void addImageBuilderClasspath(Path classpath) {
